[tool.poetry]
name = "pyrostates"
version = "0.1.0"
description = "A state handling extension for Pyrogram"
authors = [
    "Scorpi-ON <s.scorpi-on@ya.ru>", 
    "SajjadAlipour2006 <sajjadalipour2006@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyrogram = { git = "https://github.com/KurimuzonAkuma/pyrogram.git", tag = "v2.1.31" }
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
